part of lesson 7

--- a/WebContent/josephInput3.html
+++ b/WebContent/josephInput3.html
@@ -14,7 +14,7 @@
 <body>
 	<div id="containerdiv">
 		<div id="contentdiv">
-			<form action="josephservletjson" name="form2">
+			<form action="josephservlettest" name="form2">
 				<table>
 					<tr>
 						<td
