optimized the validation function of front-end data

--- a/WebContent/josephInput3.html
+++ b/WebContent/josephInput3.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='css/input3.css' rel='stylesheet' type='text/css' />  
 <style type="text/css">
-@import url('input3.css');
 </style>
-<script type="text/javascript" src="jquery-3.2.1.js"></script>
-<script type="text/javascript" src="JosephProblem.js"></script>
+<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="js/JosephProblem.js"></script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -35,7 +35,7 @@
 							class="inputstartindex" id="startindex"></td>
 					</tr>
 					<tr>
-						<td style="text-align: right;"><strong>People</strong></td>
+						<td style="text-align: right;"><strong>Persons</strong></td>
 						<td>
 							<div class="josephlistscrolling">
 								<ol id="josephlist" style="overflow:auto">
